# bump-release

./: .coveragerc  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  bump_release.py  pyproject.toml  release.ini  requirements-deploy.txt  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties
bump_release/: __init__.py  __main__.py  helpers.py
docs/source/: bump_release.helpers.rst  bump_release.rst  conf.py  index.rst  modules.rst
tests/: test_updater.py  test_updater_with_patterns.py
tests/fixtures/: main.txt  pyproject.toml  release.ini  release_with_patterns.ini  settings.ini  setup.cfg  setup.py  sonar-project.properties  sphinx.conf  vars.yml
tests/fixtures/assets/: package.json  setup.cfg
tmp/: setup.cfg  setup.py
