[metadata]
name = bump_release
version = 0.9.7
author = François GUÉRIN
author_email = fguerin@ville-tourcoing.fr
description = Updates various version numbers for python projects
url = https://github.com/frague59/bump-release
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development

[options]
py_modules = bump_release
packages = find:
install_requires = Click; ruamel.yaml
python_requires = >=3.7
